# Image_manipulator

./: Cargo.toml  LICENSE  README.md  cat.txt
src/: lib.rs  main.rs
test-output/: cat_ascii.txt
